feat: add chat mode for follow-up questions after tarot readings

--- a/translations/en.json
+++ b/translations/en.json
@@ -6,10 +6,14 @@
     "chatHeader": "TarotMeow",
     "inputPlaceholder": "Type your question...",
     "sendButton": "Send",
-    "initialBotMessage": "Welcome, My human friend! I am TarotMeow, ready to reveal the secrets of the cards. What would you like to ask?",
+    "initialBotMessage": "Welcome! I am TarotMeow. Select **Tarot** mode to ask a question and I will draw cards for you. If you want to ask for more details about a reading, please switch to **Chat** mode.",
     "revealButton": "See Card Reading",
     "thinkingMessage": "Hold your question in your mind... Breathe... The cards are listening.",
     "errorMessage": "The cards are shy... please try again.",
+    "tarotMode": "Tarot",
+    "chatMode": "Chat",
+    "noCardsDrawnError": "You need to ask a tarot question first to draw some cards!",
+
     "past": "Past",
     "present": "Present",
     "future": "Future",
