--- a/translations/zh_Hans.json
+++ b/translations/zh_Hans.json
@@ -6,10 +6,13 @@
     "chatHeader": "塔罗猫",
     "inputPlaceholder": "输入你的问题...",
     "sendButton": "发送",
-    "initialBotMessage": "欢迎，我的人类朋友！我是塔罗猫，准备好揭示卡牌的秘密了。你想问什么？",
+    "initialBotMessage": "欢迎！我是塔罗猫。选择 **塔罗** 模式来提问，我会为你抽牌。如果你想了解解读的更多细节，请切换到 **聊天** 模式。",
     "revealButton": "查看牌面解读",
     "thinkingMessage": "心中默念你的问题... 深呼吸... 牌正在聆听。",
     "errorMessage": "牌有些害羞... 请再试一次。",
+    "tarotMode": "塔罗",
+    "chatMode": "聊天",
+    "noCardsDrawnError": "你需要先进行一次塔罗占卜才能抽牌哦！",
     "past": "过去",
     "present": "现在",
     "future": "未来",
